--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.android.gms:play-services-ads:9.0.2'
     compile 'com.google.android.gms:play-services-auth:9.0.2'
-    compile files('C:/Users/yonoo/Downloads/MyFaceOn/libs/adlibr.4.4.0.0.jar')
+    compile files('D:/StudioProject/myfaceon/libs/adlibr.4.4.0.0.jar')
 }
