--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,10 @@ android {
 
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.google.android.gms:play-services-gcm:9.0.2'
-    compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.android.gms:play-services-ads:9.0.2'
