--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         android:label="@string/app_name"
         android:name="android.support.multidex.MultiDexApplication"
         android:largeHeap="true"
+        android:usesCleartextTraffic="true"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
 
         <meta-data android:name="com.google.android.gms.version"
